<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="신분" >

        <CheckBoxPreference
            android:checked="false"
            android:key="student"
            android:title="@string/identity_student" />

        <CheckBoxPreference
            android:checked="false"
            android:key="wh"
            android:title="@string/identity_wh" />

        <CheckBoxPreference
            android:checked="false"
            android:key="traveler"
            android:title="@string/identity_traveler" />

        <CheckBoxPreference
            android:checked="false"
            android:key="resident"
            android:title="@string/identity_resident" />

        <CheckBoxPreference
            android:checked="false"
            android:key="etc"
            android:title="@string/identity_etc" />

    </PreferenceCategory>
</PreferenceScreen>